# instocr-rust

./: .gitignore  BUILD.md  Cargo.toml  Configure Hotkeys.cmd  Install InstOCR.cmd  README.md  RELEASE.md  configure-hotkeys.ps1  install.ps1  uninstall.ps1
src/: main.rs
